front-end build

--- a/api/src/main/resources/templates/index.html
+++ b/api/src/main/resources/templates/index.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
->
-<!--      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"-->
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>kakao-api</title>
+    <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="kaka">
+    <meta name="generator" content="Jekyll v4.1.1">
+    <title>kaka</title>
+    <base href="/">
+    <style>
+        html, body {
+            margin: 0;
+            height: 100%;
+            /*overflow: hidden;*/
+        }
+    </style>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/assets/css/flag.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 <body>
-api server
-
-</body>
-<script>
-
-</script>
+<app-root></app-root>
+<script src="runtime-es2015.146bee25146812db2f34.js" type="module"></script><script src="runtime-es5.146bee25146812db2f34.js" nomodule defer></script><script src="polyfills-es5.ed00ff9fcaa881cb5e6e.js" nomodule defer></script><script src="polyfills-es2015.49fd5a58e9cdb20ac01e.js" type="module"></script><script src="styles-es2015.b466af2b64ef0029bdc2.js" type="module"></script><script src="styles-es5.b466af2b64ef0029bdc2.js" nomodule defer></script><script src="scripts.7fee5e1142912d1507fc.js" defer></script><script src="main-es2015.1046d9308d61bd150be5.js" type="module"></script><script src="main-es5.1046d9308d61bd150be5.js" nomodule defer></script></body>
 </html>
