--- a/front-angular/src/app/shareds/layout/header/header.component.html
+++ b/front-angular/src/app/shareds/layout/header/header.component.html
@@ -3,7 +3,15 @@
 <!--    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" [routerLink]="userService?.userDetails?.homeUrl?.replace('/#','') || '/home'">NeuroScanDx</a>-->
 
 <!--    <web-core-user-details type="inline" [class]="'btn btn-sm btn-secondary ml-3'"></web-core-user-details>-->
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<!--    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--        <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
+
+    <div class="ml-auto d-flex align-items-center">
+        <ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <sign-out [class]="'nav-link'"></sign-out>
+            </li>
+        </ul>
+    </div>
 </header>
