--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -1,4 +1,4 @@
-<main role="main" class="">
+<main role="main" class="container">
 
     <div class="mt-3 mb-3">
         <span>
@@ -9,8 +9,14 @@
         </span>
     </div>
 
-    <div class="row">
-        firend
+    <div class="container">
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let it of friends">{{it.id}} {{it.nickName}}</li>
+        </ul>
+<!--        <div *ngFor="let it of friends" class="row">-->
+<!--            <div class="col-3"><span class="mr-2 my-1 fa fa-pencil-square-o"></span>{{it.id}}</div>-->
+<!--            <div class="col-3">{{it.nickName}}</div>-->
+<!--        </div>-->
     </div>
     <button class="btn btn-info" (click)="send()">aaa</button>
 </main>
