--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -1,24 +1,20 @@
 <main role="main" class="container">
 
-    <div class="mt-3 mb-3">
-        <span>
-           친구
-        </span>
-        <span class="mx-1 float-right btn">
-           <i-feather name="user-plus" style="margin-right:10px; float: left" ></i-feather>
-        </span>
+    <div class="d-flex mt-3 mb-3 ">
+        <div class="mr-auto p-2"> 친구</div>
+        <div class="p-2"><i-feather name="refresh-Cw" style="margin-right:10px; cursor: pointer" (click)="send()"></i-feather></div>
+        <div class="p-2"><i-feather name="user-plus" style="margin-right:10px; cursor: pointer" ></i-feather></div>
     </div>
 
     <div class="container">
         <ul class="list-group">
-            <li class="list-group-item" *ngFor="let it of friends">{{it.id}} {{it.nickName}}</li>
+            <li class="list-group-item" *ngFor="let it of friends"><span class="badge badge-pill badge-primary ml-2 mr-2 ">{{it.id}}</span> <span class="badge badge-secondary ml-2 mr-2">{{it.nickName}}</span></li>
         </ul>
 <!--        <div *ngFor="let it of friends" class="row">-->
 <!--            <div class="col-3"><span class="mr-2 my-1 fa fa-pencil-square-o"></span>{{it.id}}</div>-->
 <!--            <div class="col-3">{{it.nickName}}</div>-->
 <!--        </div>-->
     </div>
-    <button class="btn btn-info" (click)="send()">aaa</button>
 </main>
 
 
