--- a/front-angular/src/app/shareds/layout/navigation/navigation.component.html
+++ b/front-angular/src/app/shareds/layout/navigation/navigation.component.html
@@ -26,7 +26,7 @@
                     </ul>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" (click)="closeCollapse()" [routerLink]="'/talks'" [routerLinkActive]="['active']">
+                            <a class="nav-link" (click)="closeCollapse()" [routerLink]="'/rooms'" [routerLinkActive]="['active']">
                                 &nbsp;&nbsp;
                                 <i-feather name="twitch" class="sub-icon"></i-feather>
                                 <a>talks</a>
