--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -8,7 +8,9 @@
 
     <div class="container">
         <ul class="list-group">
-            <li class="list-group-item" *ngFor="let it of friends"><span class="badge badge-pill badge-primary ml-2 mr-2 ">{{it.id}}</span> <span class="badge badge-secondary ml-2 mr-2">{{it.nickName}}</span></li>
+            <li class="list-group-item" style="cursor:pointer" *ngFor="let it of friends" (click)="showUser(it)">
+                <span class="badge badge-pill badge-primary ml-2 mr-2 ">{{it.id}}</span> <span class="badge badge-secondary ml-2 mr-2">{{it.nickName}}</span>
+            </li>
         </ul>
 <!--        <div *ngFor="let it of friends" class="row">-->
 <!--            <div class="col-3"><span class="mr-2 my-1 fa fa-pencil-square-o"></span>{{it.id}}</div>-->
@@ -18,3 +20,36 @@
 </main>
 
 
+
+
+
+
+<basic-modal #userModal [config]="{class: 'modal-lg', ignoreBackdropClick: true}" > <!--(completed)="roomCompleted()"-->
+    <div *ngIf="choiceUser">
+        <div class="m-2">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">name</span>
+                </div>
+                <input type="text" class="form-control" readonly placeholder="name" aria-label="Username" aria-describedby="basic-addon1" value="{{choiceUser.id}} - {{choiceUser.nickName}}">
+            </div>
+        </div>
+        <div #contents style="height: 300px; width: 100%; overflow: scroll" class="alert alert-info m-2" >
+            <li #contentsItems class="list-group-item" *ngFor="let it of userMessage" style="cursor: pointer" [ngStyle]="{'text-align': userMessage && it.userId === userTokenContain.id ? 'right' : 'left'}">
+                <span class="badge badge-pill badge-primary">
+                {{it.userId}}
+                </span>
+                <span class="badge badge-light ml-2 mr-2">{{it.contents}}</span>
+                <span class="badge badge-secondary">{{it.regDt | moment}}</span>
+            </li>
+        </div>
+        <div class="m-2">
+            <div class="input-group mb-3">
+                <input #sendInput type="text" class="form-control" placeholder="message">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" (click)="sendMessage(choiceUser, sendInput.value); sendInput.value=''" >Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</basic-modal>
