--- a/front-angular/src/app/features/auths/signs/sign-out/sign-out.component.html
+++ b/front-angular/src/app/features/auths/signs/sign-out/sign-out.component.html
@@ -10,7 +10,7 @@
     <!--        </button>-->
     <!--    </div>-->
     <div class="modal-body">
-        <h6>log-out</h6>
+        <h6>로그아웃 하시겠습니까?</h6>
     </div>
     <div class="modal-footer" style="padding: 3px;">
 <!--        w-25-->
