--- a/front-angular/src/app/shareds/layout/navigation/navigation.component.html
+++ b/front-angular/src/app/shareds/layout/navigation/navigation.component.html
@@ -42,6 +42,28 @@
                             </a>
                         </li>
                     </ul>
+
+
+                <div class="container" style="margin-top: 80px">
+                    <div class="row profile">
+                                <!-- SIDEBAR USERPIC -->
+                                <div class="profile-userpic" style="text-align: center">
+                                    <img style="width: 80%; height: 80%" src="https://dt8upu5cibhp1.cloudfront.net/5db96de3e32fa818dc0d0aecfe82869f" class="img-responsive" alt="">
+                                </div>
+                                <!-- END SIDEBAR USERPIC -->
+                                <!-- SIDEBAR USER TITLE -->
+                                <div *ngIf="user" class="profile-usertitle" style="width: 100%; height: 100%">
+                                    <div class="profile-usertitle-name">
+                                        {{user.nickName}}
+                                    </div>
+                                    <div class="profile-usertitle-job">
+                                        {{user.statusMsg}}
+                                    </div>
+                                </div>
+                    </div>
+                </div>
+
+
 <!--                </ng-container>-->
             </div>
         </nav>
