--- a/front-angular/src/app/features/rooms/room.component.html
+++ b/front-angular/src/app/features/rooms/room.component.html
@@ -14,8 +14,8 @@
                 <div>
                     <b>{{it.name}}</b> <br *ngIf="it.lastMsgContents">{{it.lastMsgContents}}&nbsp;&nbsp;&nbsp; {{it.lastMsgDt | date: 'yyyy/MM/dd HH:mm:ss'}}
                 </div>
-                <div *ngIf="it.userRooms">
-                    <span *ngFor="let sit of it.userRooms" class="badge badge-primary m-1">{{sit.user.nickName}}</span>
+                <div *ngFor="let it2 of it.users | keyvalue">
+                    <span class="badge badge-primary m-1">{{it2.value.nickName}}</span>
                 </div>
 
             </li>
@@ -55,18 +55,18 @@
                     참여자
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <button class="dropdown-item" type="button" *ngFor="let it of choiceRoom.userRooms">{{it.userId}}</button>
+                    <button class="dropdown-item" type="button" *ngFor="let it of choiceRoom.users | keyvalue">{{it.value.id}}</button>
                 </div>
             </div>
         </div>
         <div #contents style="height: 300px; width: 100%; overflow: scroll" class="alert alert-info m-2" >
-            <li #contentsItems class="list-group-item" *ngFor="let it of choiceRoomMessages" style="cursor: pointer" [ngStyle]="{'text-align': userTokenContain && it.userId === userTokenContain.id ? 'right' : 'left'}">
+            <li #contentsItems class="list-group-item" *ngFor="let it of choiceRoomMessages" style="cursor: pointer" [ngStyle]="{'text-align': userTokenContain && it.message.userId === userTokenContain.id ? 'right' : 'left'}">
 <!--                <span [style]="userTokenContain && it.userId === userTokenContain.id ? 'float: right' : 'float: left'">-->
                 <span class="badge badge-pill badge-primary">
-                {{it.userId}}
+                {{it.message.userId}}
                 </span>
-                <span class="badge badge-light ml-2 mr-2">{{it.contents}}</span>
-                <span class="badge badge-secondary">{{it.regDt | moment}}</span>
+                <span class="badge badge-light ml-2 mr-2">{{it.message.contents}}</span>
+                <span class="badge badge-secondary">{{it.message.regDt | moment}}</span>
 
 <!--                <span style="float: right" *ngIf="userTokenContain && it.userId === userTokenContain.id"> *me</span>-->
             </li>
