자동배포 설정 및 전체적인 코드 정리

--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -1,10 +1,10 @@
 <main role="main" class="container">
 
     <div class="d-flex mt-3 mb-3 ">
-        <div class="mr-auto p-2"> 친구</div>
-        <div class="p-2">
-            <i-feather name="refresh-Cw" style="margin-right:10px; cursor: pointer" (click)="send()"></i-feather>
-        </div>
+        <div class="mr-auto p-2"> <b>친구</b></div>
+<!--        <div class="p-2">-->
+<!--            <i-feather name="refresh-Cw" style="margin-right:10px; cursor: pointer" (click)="send()"></i-feather>-->
+<!--        </div>-->
         <div class="p-2">
             <i-feather name="user-plus" style="margin-right:10px; cursor: pointer"
                        (click)="openAddFriendModal()"></i-feather>
