--- a/front-angular/src/app/features/auths/login/login.component.html
+++ b/front-angular/src/app/features/auths/login/login.component.html
@@ -24,37 +24,37 @@
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">id</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="id" placeholder="id" formControlName="id">
+                <input type="text" class="form-control" name="id" placeholder="아이디를 입력해주세요" formControlName="id">
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">nick</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="nickName" placeholder="nickName" formControlName="nickName">
+                <input type="text" class="form-control" name="nickName" placeholder="닉네임을 입력해주세요" formControlName="nickName">
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">phone</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="phone" placeholder="phone" formControlName="phone" >
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-sm-2 col-form-label">statusMsg</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="statusMsg" placeholder="statusMsg" formControlName="statusMsg">
+                <input type="text" class="form-control" name="phone" placeholder="전화번호를 입력해주세요" formControlName="phone" >
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" name="password" placeholder="password" formControlName="password">
+                <input type="password" class="form-control" name="password" placeholder="비밀번호를 입력해주세요" formControlName="password">
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">file</label>
             <div class="col-sm-10">
                 <input #file class="form-control" type="file" name="file" placeholder="file" formControlName="file" accept="image/gif,image/jpeg,image/png" id="formFile"  (change)="fileList = file.files">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">statusMsg</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="statusMsg" placeholder="상태메시지를 입력해주세요" formControlName="statusMsg">
             </div>
         </div>
     </form>
