--- a/front-angular/src/app/features/rooms/room.component.html
+++ b/front-angular/src/app/features/rooms/room.component.html
@@ -2,9 +2,9 @@
 
 
     <div class="d-flex mt-3 mb-3 ">
-        <div class="mr-auto p-2" style="margin-left: 50px"> 대화방</div>
-        <div class="p-2"><i-feather name="refresh-Cw" style="margin-right:10px; cursor: pointer" (click)="send()"></i-feather></div>
-        <div class="p-2"><i-feather name="plus-square" style="margin-right:10px; cursor: pointer" (click)="createRoom(); modal.show()"></i-feather></div>
+        <div class="mr-auto p-2" style="margin-left: 50px"> <b>대화방</b></div>
+<!--        <div class="p-2"><i-feather name="refresh-Cw" style="margin-right:10px; cursor: pointer" (click)="send()"></i-feather></div>-->
+        <div class="p-2" style="margin-right: 38px"><i-feather name="plus-square" style="margin-right:10px; cursor: pointer" (click)="createRoom(); modal.show()"></i-feather></div>
     </div>
 
 
@@ -14,8 +14,8 @@
                 <div>
                     <b>{{it.name}}</b> <br *ngIf="it.lastMsgContents">{{it.lastMsgContents}}&nbsp;&nbsp;&nbsp; {{it.lastMsgDt | date: 'yyyy/MM/dd HH:mm:ss'}}
                 </div>
-                <div *ngFor="let it2 of it.users | keyvalue">
-                    <span class="badge badge-primary m-1">{{it2.value.nickName}}</span>
+                <div >
+                    <span *ngFor="let it2 of it.users | keyvalue" class="badge badge-primary m-1">{{it2.value.nickName}}</span>
                 </div>
 
             </li>
