--- a/front-angular/src/app/features/settings/setting.component.html
+++ b/front-angular/src/app/features/settings/setting.component.html
@@ -2,7 +2,7 @@
 
     <div class="mt-3 mb-3" style="margin-left: 55px">
         <div style="margin-top: 25px">
-           환경설정
+           <b>환경설정</b>
         </div>
     </div>
 
