파일 lazy 처리 시 에러 수정, 채팅방리스트 이미지 추가

--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -54,7 +54,7 @@
         <div class="m-2">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">name</span>
+                    <span class="input-group-text" id="basic-addon1">대화상대</span>
                 </div>
                 <input type="text" class="form-control" readonly placeholder="name" aria-label="Username"
                        aria-describedby="basic-addon1" value="{{choiceUser.id}} - {{choiceUser.nickName}}">
