이미지 제대로 불러오지 않는 버그 수정

--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div *ngIf="findUser" style="text-align: center">
-            <img *ngIf="findUser" style="width: 50%; height: 50%" src="{{findUser.file?.filePath}}" class="img-responsive" alt="">
+            <img *ngIf="findUser" style="width: 50%; height: 50%" src="{{findUser.file.filePath}}" class="img-responsive" alt="">
 
             <div style="font-size: 15px">{{findUser.nickName}}</div>
         </div>
