메시지 전송 이벤트 추가
- 엔터 입력 시에도 메시지 전송되게 수정

--- a/front-angular/src/app/features/friends/friend.component.html
+++ b/front-angular/src/app/features/friends/friend.component.html
@@ -75,6 +75,7 @@
                 <input #sendInput type="text" class="form-control" placeholder="message">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button"
+                            (keyup.enter)="sendMessage(choiceUser, sendInput.value); sendInput.value=''"
                             (click)="sendMessage(choiceUser, sendInput.value); sendInput.value=''">Send
                     </button>
                 </div>
